# ad-begone

./: .dockerignore  Dockerfile  README.md  _config.yml  compose.yml  index.md  pyproject.toml
.devcontainer/: devcontainer.json  startup.sh
.github/workflows/: ci.yml  claude.yml
_layouts/: default.html
scripts/: generate_test_podcasts.sh
src/ad_begone/: __init__.py  accuracy.py  ad_trimmer.py  logging.py  models.py  notif_path.py  remove_ads.py  utils.py  watch_directory.py
test/: conftest.py  test_accuracy.py  test_accuracy_eval.py  test_ad_trimmer.py  test_import.py  test_models.py  test_openai_api.py  test_remove_ads.py  test_utils.py  test_watch_directory.py
test/data/: part_0_test_long.json  part_0_test_long.mp3.transcription.json  part_1_test_long.json  part_1_test_long.mp3.transcription.json  test.json  test.mp3.transcription.json  test.transcript.txt  test_annotation_completion.json  test_long.json  test_long.mp3.transcription.json  test_long.transcript.txt  test_new.json  test_new.mp3.transcription.json  test_new.transcript.txt
test/data/my_dir/: part_0_test_pod1.json  part_0_test_pod1.mp3.transcription.json  part_0_test_pod2.json  part_0_test_pod2.mp3.transcription.json  part_0_test_pod3.json  part_0_test_pod3.mp3.transcription.json  part_1_test_pod1.json  part_1_test_pod1.mp3.transcription.json
test/fixtures/no_ads/: ground_truth.json  transcription.json
test/fixtures/simple_podcast/: ground_truth.json  transcription.json
test/fixtures/subtle_boundary/: ground_truth.json  transcription.json
