[project]
name = "ad-begone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Samantha Barron", email = "sam@sambarron.me" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.3",
    "openai>=1.63.0",
    "pydantic-argparse>=0.10.0",
    "pydub>=0.25.1",
    "audioop-lts>=0.2.2; python_version>='3.13'",
    "tqdm>=4.67.1",
]

[project.scripts]
ad-begone = "ad_begone.watch_directory:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
